cmss/main/default/objects/CaseType__c/CaseType__c.object-meta.xml
<CustomObject>
    <description>Holds different types of cases which are linked to one parent case</description>
    <label>Case Type</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CaseType Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>