cmss/main/default/objects/CaseType__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Types</relationshipLabel>
    <relationshipName>Case_Types</relationshipName>
    <type>Lookup</type>
</CustomField>