cmss/main/default/objects/CaseType__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Číslo smlouvy</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Case Types</relationshipLabel>
    <relationshipName>CaseTypes</relationshipName>
    <type>Lookup</type>
</CustomField>