cmss/main/default/objects/CaseType__c/fields/AssetNumber__c.field-meta.xml
<CustomField>
    <fullName>AssetNumber__c</fullName>
    <description>Číslo smlouvy - vyplňuje se v případě že smlouva neexistuje v systému</description>
    <label>Asset Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>