cmss/main/default/objects/CaseType__c/fields/CaseTypeNotificationHelper__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeNotificationHelper__c</fullName>
    <description>is1 if CaseType1 or CaseType2 is 11, is used in Case helper roll-up summary field to determine if Email alert should be sent</description>
    <formula>IF(ISPICKVAL(CaseType1__c, &apos;11&apos;) || ISPICKVAL(CaseType2__c, &apos;11&apos;) ,
				1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type Notification Helper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>