cmss/main/default/objects/CaseType__c/fields/ClosingAgentId__c.field-meta.xml
<CustomField>
    <fullName>ClosingAgentId__c</fullName>
    <description>vyplní se automaticky, dotáhe se z čísla smlouvy</description>
    <label>Closing Agent Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>