cmss/main/default/objects/CaseType__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <description>vyplní se automaticky, dotáhe se z čísla smlouvy</description>
    <label>Product2 Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>