cmss/main/default/objects/CaseType__c/fields/ProductCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ProductCloseDate__c</fullName>
    <description>vyplní se automaticky, dotáhe se z čísla smlouvy</description>
    <label>Product Close Date</label>
    <type>Date</type>
</CustomField>