cmss/main/default/objects/CaseType__c/fields/TargetAmount__c.field-meta.xml
<CustomField>
    <fullName>TargetAmount__c</fullName>
    <description>cílová částka, doplní se z čísla smlouvy v případě stavebního spoření, u ostatních produktů zůstane prázdná</description>
    <label>Target Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>