cmss/main/default/objects/CaseType__c/recordTypes/CaseTypeWithAsset.recordType-meta.xml
<RecordType>
    <fullName>CaseTypeWithAsset</fullName>
    <active>true</active>
    <label>Case Type With Asset</label>
</RecordType>