cmss/main/default/objects/CaseType__c/recordTypes/CaseTypeWithoutAsset.recordType-meta.xml
<RecordType>
    <fullName>CaseTypeWithoutAsset</fullName>
    <active>true</active>
    <label>Case Type Without Asset</label>
</RecordType>